# jpeg

./: .travis.yml  README.adoc  appveyor.yml  version.txt
.github/workflows/: ci.yml
android/: jpeg-$(version).pom.in  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/jpeg/: CMakeLists.txt  build.gradle
android/jpeg/src/main/: AndroidManifest.xml
android/libjpeg/: build.gradle
cocoapods/: jpeg.podspec.in  libjpeg.podspec
ios/tests/: main.m
ios/tests.xcodeproj/: project.pbxproj
ios/tests.xcodeproj/project.xcworkspace/xcuserdata/ivan.xcuserdatad/: UserInterfaceState.xcuserstate
ios/tests.xcodeproj/xcshareddata/xcschemes/: tests.xcscheme
ios/tests.xcodeproj/xcuserdata/ivan.xcuserdatad/xcschemes/: xcschememanagement.plist
jpeg/: jconfig.h
msvs_solution/: msvs_solution.sln
msvs_solution/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
nuget/: build_nuget.ps1  nuget.autopkg  nuget.autopkg.in
src/jpeg/: jconfig.h  jdmerge.c  jquant2.c
xcode/: Podfile
xcode/jpeg/jpeg.xcodeproj/: project.pbxproj
xcode/jpeg/jpeg.xcodeproj/project.xcworkspace/xcuserdata/ivan.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/jpeg/jpeg.xcodeproj/xcuserdata/ivan.xcuserdatad/xcschemes/: xcschememanagement.plist
